--- a/style.css
+++ b/style.css
@@ -12,24 +12,29 @@ body{
 .menu {
     position: absolute;
     right: 30px;
-    top: 10px;
+    top: 0px;
     color: #228FD9;
     display: flex;
 }
 
 .menu_btn {
     margin: 10px 20px;
-    font-size: 30px;
+    font-size: 25px;
     text-align: center;
     
 }
 
+header, main{
+    margin: 0px 0px 10px 0px;
+}
+
 a{
     color: inherit;
+    display: flex;
 }
 
 form {
-    background-color: #212121;
+    background-color: #2e2e2e;
     padding: 15px;
     width: 250px;
     height: 300px;
@@ -40,6 +45,7 @@ form {
     justify-content: center;
     color: white;
     border-radius: 16px;
+    position: relative;
 }
 
 .input, .submit {
@@ -62,4 +68,30 @@ input {
     background-color: #228FD9;
     
 
+}
+
+.section {
+    background-color: #2e2e2e;
+    color: white;
+    width: 80%;
+    display: flex;
+    margin: 20px auto;
+    align-items: center;
+    padding: 0px 15px;
+    border-radius: 15px;
+
+}
+
+.open {
+    height: 25px;
+    rotate: 90deg;
+    margin: 0px 10px 0px 5px ;
+}
+
+.login_error {
+    text-align: center;
+    color: red;
+    position: absolute;
+    bottom: 10px;
+    display: none;
 }
