--- a/style.css
+++ b/style.css
@@ -10,6 +10,10 @@ body{
     height: 100%;
 }
 
+main{
+    position: relative;
+}
+
 html{
     height: 1700px;
 }
@@ -38,7 +42,7 @@ a{
     display: flex;
 }
 
-form {
+.formm {
     background-color: #2e2e2e;
     padding: 15px;
     width: 200px;
@@ -54,6 +58,7 @@ form {
     top: 100px;
     right: 0px;
     border: 2px solid #228FD9;
+    z-index: 100;
 }
 
 .input, .submit {
@@ -166,4 +171,59 @@ section {
     padding: 5px;
     border-radius: 10px;
     background-color: #005c99;
+}
+
+.delivery{
+    background-color: #2e2e2e;
+    padding: 30px;
+    width: 1000px;
+    justify-content: center;
+    position: absolute;
+    border: 3px solid #228FD9;
+    border-radius: 16px;
+    left: 50%;
+    transform: translateX(-50%); 
+    top: 10px;
+}
+
+h2{
+    text-align: center;
+    color: #228FD9;
+}
+
+.delivery_form{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+.form_elem{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    margin: 10px;
+    width: 70%;
+}
+
+.form_input{
+    width: 70%;
+    margin: 0px 0px 0px 15px;
+}
+
+.form_text{
+    width: 200px;
+}
+
+.form_submit{
+    margin: 20px 0px 0px 0px;
+}
+
+.form_cross{
+    height: 25px;
+    width: 25px;
+    position: absolute;
+    right: 10px;
+    top: 10px;
 }
